# cei-tom-dataset-base

./: .gitignore  CHANGELOG.md  CLAUDE.md  DATASET_CARD.md  DATASHEET.md  LICENSE  README.md  REPRODUCIBILITY.md  croissant.json  pyproject.toml  requirements.txt
config/: config-dmlr.yml  config.yml
data/human-gold/: data_deflection-misdirection.csv  data_mixed-signals.csv  data_passive-aggression.csv  data_sarcasm-irony.csv  data_strategic-politeness.csv
docs/: copy_postprocessing.md
logs/: log_dmlr2026_pipeline_20260207_211700.txt  log_dmlr2026_pipeline_20260207_211821.txt
papers/dmlr2026/: cei-tom_dataset.bib  cei-tom_dataset.tex  generate_figures.py
prompts/: README.md  chain_of_thought.txt  few_shot_examples.json  zero_shot.txt
scripts/: generate_figures.py  generate_model_confusion_matrix.py  qa_pipeline.py  run_pipeline_dmlr2026.py
